[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obisdois"
version = "0.1.0"
description = "obis-dois"
authors = [
    { name="Pieter Provoost", email="p.provoost@unesco.org" }
]
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
